# tcg-pokemon-data-pipeline

./: Dockerfile  README.md  docker-compose-minio.yml  docker-compose.yml  pyproject.toml
dags/: ingestion_pokemon_cards.py  pipeline_pokemon.py  transformation_analysis_cards.py  transformation_pokemon_cards.py
scripts/: minio_connection.py  processing_bronze_to_silver.py  processing_silver_to_gold.py
scripts/Model/: analysisModel.py  cardModel.py
